syntax = "proto3";

package octane.evmengine.module;

import "cosmos/app/v1alpha1/module.proto";

option go_package = "octane/evmengine/module";

// Module is the config object for the module.
message Module {
  option (cosmos.app.v1alpha1.module) = {
    go_import: "github.com/omni-network/omni/octane/evmengine"
  };

  // authority defines the custom module authority. If not set, defaults to the governance module.
  string authority = 1;

  // max_withdrawals_per_block specifies the maximum number of withdrawals included in one block.
  uint64 max_withdrawals_per_block = 2;
}
